crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_bare_optional_self_reference.txt
A = (A)?
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:1:6
  |
1 | A = (A)?
  |      ^
  |      |
  |      references itself
  |
help: match at least one syntax-tree node before recursing
help: make every path through this cycle match a syntax-tree node before it returns to `A`
------------------ DEFINITIONS -------------------
A
  A (cycle)
